[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "wheel",
]
build-backend = 'setuptools.build_meta'

[project]
name = "ablog"
dynamic = ["version"]
description = "A Sphinx extension that converts any documentation or personal website project into a full-fledged blog."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE.rst"}
keywords = [
  "ablog",
  "blog",
  "blogging",
  "sphinx",
  ]
authors = [
  {email = "sunpy@googlegroups.com", name = "The SunPy Community"},
  {email = "nabil.freij@gmail.com", name = "Nabil Freij"},
  {name = "Ahmet Bakan"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
]
dependencies = [
  "docutils>=0.18",
  "feedgen>=0.9.0",
  "invoke>=1.6.0",
  "packaging>=19.0",
  "python-dateutil>=2.8.2",
  "sphinx>=6.0.0",
  "watchdog>=2.1.0",
]

[project.optional-dependencies]
all = ["ablog[markdown,notebook]"]
notebook = [
  "ipython>=7.30.0",
  "nbsphinx>=0.8.0",
]
markdown = ["myst-parser>=0.17.0"]
docs = [
  "sunpy-sphinx-theme",
  "sphinx-automodapi",
]
tests = [
  "defusedxml>=0.8.0rc2",
  "pytest-cov",
  "pytest",
]

[project.urls]
changelog = "https://ablog.readthedocs.io/en/stable/blog/category/release.html"
documentation = "https://ablog.readthedocs.io/en/stable/"
homepage = "https://github.com/sunpy/ablog"
issue_tracker = "https://github.com/sunpy/ablog/issues"
repository = "https://github.com/sunpy/ablog"

[project.scripts]
ablog = "ablog.commands:ablog_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ablog/version.py"

[tool.codespell]
skip = "*cache*,*egg*,*extern*,.git,.idea,.tox,*.svg,.history,*sphinx.po"

[tool.djlint]
files=["*.html"]
