[metadata]
name = ablog
author = The SunPy Community
author_email = sunpy@googlegroups.com
description = A Sphinx extension that converts any documentation or personal website project into a full-fledged blog.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://ablog.readthedocs.org/
edit_on_github = True
github_project = sunpy/ablog

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
  docutils
  feedgen
  invoke
  python-dateutil
  sphinx
  watchdog

[options.extras_require]
notebook =
  ipython
  nbsphinx
markdown =
  myst-parser
docs =
  alabaster
  sphinx-automodapi
tests =
  pytest

[options.entry_points]
console_scripts =
    ablog = ablog.commands:ablog_main

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110

[isort]
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ablog
length_sort = False
length_sort_sections = stdlib
line_length = 110
multi_line_output = 3
skip = .history
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  */ablog/__init__*
  */ablog/*/tests/*
  */ablog/*setup*
  */ablog/conftest.py
  */ablog/cython_version*
  */ablog/extern/*
  */ablog/version*
  ablog/__init__*
  ablog/*/tests/*
  ablog/*setup*
  ablog/conftest.py
  ablog/cython_version*
  ablog/extern/*
  ablog/version*


[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}

[tool:pytest]
markers = sphinx
testpaths = tests
